test_suite/alan-2022-examples/failing/007150_mutation.alan
source Nb begin put "" . call "$\"" end
